[tool.poetry]
name = "bowling"
version = "0.1.0"
description = ""
authors = ["Brad Brown <brad@bradsbrown.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
rich = "^13.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.271"
black = "^23.3.0"
mypy = "^1.3.0"
sh = "^2.0.4"

[tool.poetry.scripts]
bowling = "bowling.cli:cli"
api = "bowling.main:dev_run"
lint = "bowling.cli:lint"

[tool.ruff]
select = ["E", "F", "I"]
fixable = ["I"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
